Sun Mar 15 11:15:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h ({RSTRING,RBIGNUM}_EMBED_LEN_MAX): made int.

	* include/ruby/ruby.h (OBJ_{TAINTED,UNTRUSTED,FROZEN}): return int.

	* include/ruby/encoding.h (ENC_CODERANGE): ditto.

Sun Mar 15 11:11:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_hash_uint, rb_hash_start, rb_hash_end): use VALUE
	  rather than unsigned int.

Sun Mar 15 11:00:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): stop the timer thread before exec.

Sun Mar 15 09:17:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (.y.c): use SRC_FILE which contains slashes instead of
	  backslashes.  [ruby-core:22891]

Sun Mar 15 08:26:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (srcs-ext): creates ext/dl/callback/callback.c also.

Sun Mar 15 03:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (SAVED_GROUP_ID, p_gid_switch): should be rb_gid_t.

Sun Mar 15 02:53:13 2009  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_subpat): accept capture name.
	  (rb_str_aref): follow above change.
	  (rb_str_aref_m): pass the 2nd argument to rb_str_subpat.
	  (rb_str_subpat_set): accept capture name.
	  (rb_str_aset): follow above change.
	  (rb_str_partition): ditto.
	  (rb_str_aset_m): pass the 2nd argument to rb_str_subpat_set.

	* include/ruby/intern.h (rb_reg_backref_number): declared.

	* re.c (rb_reg_backref_number): defined.

	  [ruby-core:21057]

Sun Mar 15 02:09:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bmcall): should not uninitialized variable.  a patch from
	  pegacorn at [ruby-dev:38169].

Sat Mar 14 18:25:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_scan_oct, ruby_scan_hex): use size_t.

Sat Mar 14 18:18:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_proc_call, rb_node_arity, bmcall, curry): checks
	  overflow.

	* proc.c (rb_proc_parameters): unnamed_parameters() expects in